--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit DIY Theme",
+    "title": "Calogico Pellet",
     "path_prefix": "/",
     "layout_type": "boxed",
     "style": "classic",
