config.json: updated title

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Daniele D",
+    "title": "Daniele D'Amico UX Designer",
     "path_prefix": "/",
     "layout_type": "full-width",
     "style": "minimal",
