--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,7 +38,7 @@
                 "style": "link"
             }
         ],
-        "has_secondary_nav": false,
+        "has_secondary_nav": true,
         "secondary_nav_links": [
             {
                 "label": "Contact",
