--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
     "mode": "dark",
     "base_font": "serif",
     "header": {
-        "title": "DIY",
+        "title": "Daniele D'Amico",
         "logo": "/images/risorsa-3.png",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
