--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
     "base_font": "serif",
     "header": {
         "title": "Daniele D'Amico",
-        "logo": "/images/risorsa-3.png",
+        "logo": "/images/house_light_idea-1.svg",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
         "primary_nav_links": [
