--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,7 @@
                 "style": "link"
             },
             {
-                "label": "Blog",
+                "label": "About",
                 "url": "/blog",
                 "style": "link"
             },
