--- a/content/data/config.json
+++ b/content/data/config.json
@@ -41,7 +41,7 @@
                 "style": "link"
             },
             {
-                "label": "Get Started",
+                "label": "Contattami",
                 "url": "/pricing",
                 "style": "primary"
             }
