config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -41,7 +41,7 @@
                 "style": "link"
             },
             {
-                "label": "Contattami",
+                "label": "Scarica il mio CV",
                 "url": "/pricing",
                 "style": "primary"
             }
