--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,7 +15,7 @@
             {
                 "label": "Metodo",
                 "url": "/features",
-                "style": "secondary"
+                "style": "link"
             },
             {
                 "label": "CV",
