--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Daniele D'Amico UX Designer",
     "path_prefix": "/",
-    "layout_type": "boxed",
+    "layout_type": "full-width",
     "style": "bold",
     "palette": "blue",
     "mode": "light",
