--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,7 +3,7 @@
     "path_prefix": "/",
     "layout_type": "boxed",
     "style": "bold",
-    "palette": "gray",
+    "palette": "green",
     "mode": "light",
     "base_font": "serif",
     "header": {
