--- a/content/data/config.json
+++ b/content/data/config.json
@@ -13,7 +13,7 @@
         "has_primary_nav": true,
         "primary_nav_links": [
             {
-                "label": "Metodo",
+                "label": "METODO",
                 "url": "/features",
                 "style": "link"
             },
