--- a/content/data/config.json
+++ b/content/data/config.json
@@ -42,5 +42,21 @@
             }
         ]
     },
-    "domain": "https://majestic-avocado-40127.netlify.app"
+    "domain": "https://majestic-avocado-40127.netlify.app",
+    "footer": {
+        "logo_alt": "lorem-ipsum",
+        "has_primary_nav": true,
+        "primary_nav_title": "lorem-ipsum",
+        "primary_nav_links": [],
+        "has_secondary_nav": true,
+        "secondary_nav_title": "lorem-ipsum",
+        "secondary_nav_links": [],
+        "has_tertiary_nav": true,
+        "tertiary_nav_title": "lorem-ipsum",
+        "tertiary_nav_links": [],
+        "has_social": true,
+        "social_links": [],
+        "content": "lorem-ipsum",
+        "links": []
+    }
 }
