--- a/content/data/config.json
+++ b/content/data/config.json
@@ -56,7 +56,7 @@
         "tertiary_nav_links": [],
         "has_social": true,
         "social_links": [],
-        "content": "Made with ❤️ by Daniele D'Amico using Stackbit and ",
+        "content": "Made with ❤️ by Daniele D'Amico using Stackbit and React",
         "links": []
     }
 }
