--- a/content/data/config.json
+++ b/content/data/config.json
@@ -36,7 +36,7 @@
         "has_secondary_nav": true,
         "secondary_nav_links": [
             {
-                "label": "Scarica il mio CV",
+                "label": "SCARICA ",
                 "url": "/pricing",
                 "style": "primary"
             }
