config.json: updated favicon

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -69,5 +69,6 @@
         ],
         "content": "Made with ❤️ by Daniele D'Amico using Stackbit and React",
         "links": []
-    }
+    },
+    "favicon": "/images/house_light_idea-1 1.svg"
 }
